Fix backend tests and SpotBugs problems
Co-authored-by: lgalvao <727976+lgalvao@users.noreply.github.com>